--- a/main.css
+++ b/main.css
@@ -1,1 +1,11 @@
-main.css
+.content {
+    margin-top: 4em;
+    padding: 1em;
+    text-align: center;
+}
+.content h1 {
+    font-size: 1.5em;
+}
+.content p {
+    margin: .5em;
+}
