Makes header fixed

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ ul {
     border: 1px solid gray;
 }
 .item--added {
-    background: black;
+    background: gray;
     color: white !important;
 }
 .item__image {
