More fixes for an item's cart counter and prevent confusion between products on offer and added products

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ h2 {
     background: gray;
 }
 .item__offer {
-    background: gray;
+    background: #EEBC1D;
 }
 .item__offer, .item__name {
     padding: .2em;
