--- a/main.css
+++ b/main.css
@@ -11,11 +11,12 @@ h2 {
 .item {
     position: relative;
     margin: 1em;
-    border: 1px solid gray;
+    border: 1px solid #D3D3D3;
 }
 .item--added {
     background: gray;
     color: white;
+    border-color: black;
 }
 .item__image {
     width: 100%;
@@ -25,6 +26,7 @@ h2 {
     position: absolute;
     top: .5em;
     left: 0;
+    font-size: 1.3em;
     color: white;
     background: gray;
 }
