--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ h2 {
     right: .1em;
     line-height: 2em;
     font-size: .6em;
+    font-weight: bold;
     text-align: center;
     color: white;
     -webkit-border-radius: 50%;
