--- a/main.css
+++ b/main.css
@@ -98,6 +98,13 @@ ul {
     width: auto;
     height: 2.5em;
 }
+.cart .item__price {
+    position: absolute;
+    display: block;
+    padding: 0;
+    width: 100%;
+    line-height: 2.5em;
+}
 .cart .item__action {
     float: right;
 }
