--- a/main.css
+++ b/main.css
@@ -116,8 +116,7 @@ ul {
 }
 .cart .item__price {
     position: absolute;
-    display: block;
-    padding: 0;
+    display: inline-block;
     width: 100%;
     line-height: 2.5em;
 }
@@ -129,8 +128,8 @@ ul {
     opacity: .4;
 }
 @media only screen and (max-width: 400px) {
-    .cart .item__price {
+    .cart .item__price, .cart .item__action {
         position: static;
-        display: inline;
+        float: right;
     }
 }
