--- a/main.css
+++ b/main.css
@@ -129,6 +129,11 @@ ul {
 .item--removing {
     opacity: .4;
 }
+@media only screen and (max-width: 400px) {
+    .cart .item__frame {
+        display: none;
+    }
+}
 @media only screen and (max-width: 500px) {
     .cart .item__action {
         position: static;
