--- a/main.css
+++ b/main.css
@@ -87,10 +87,18 @@ ul {
 .item--added .item__cart {
     display: inline;
 }
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 550px) {
+    .items .item__frame {
+        height: 160px;
+    }
     .items .item {
         display: inline-block;
         width: 43%;
+    }
+}
+@media only screen and (min-width: 700px) {
+    .items .item__frame {
+        height: 200px;
     }
 }
 @media only screen and (min-width: 1020px) {
