--- a/main.css
+++ b/main.css
@@ -94,6 +94,7 @@ ul {
     .items .item {
         display: inline-block;
         width: 43%;
+        vertical-align: top;
     }
 }
 @media only screen and (min-width: 700px) {
